ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/Invoice_Details__c.object-meta.xml
<CustomObject>
    <label>Invoice Details</label>
    <nameField>
        <displayFormat>INVD-{00000}</displayFormat>
        <label>Invoice Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>