ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Ben_Code_Of_Main_dealer__c.field-meta.xml
<CustomField>
    <fullName>Ben_Code_Of_Main_dealer__c</fullName>
    <label>Ben Code Of Main dealer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>