ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/CESS__c.field-meta.xml
<CustomField>
    <fullName>CESS__c</fullName>
    <label>CESS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>