ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <label>Chassis No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>