ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Number</label>
    <referenceTo>Deal_Number__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>