ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Discount_on_Ex_showroom_price__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_Ex_showroom_price__c</fullName>
    <label>Discount on Ex-showroom price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>