ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Do_you_accept_uploaded_invoice__c.field-meta.xml
<CustomField>
    <fullName>Do_you_accept_uploaded_invoice__c</fullName>
    <label>Do you accept uploaded invoice ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>