ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documents</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>