ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Ex_showroom_price__c.field-meta.xml
<CustomField>
    <fullName>Ex_showroom_price__c</fullName>
    <label>Ex-showroom price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>