ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Ex_showroom_prices__c.field-meta.xml
<CustomField>
    <fullName>Ex_showroom_prices__c</fullName>
    <label>Ex-showroom price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>