ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/GST_Total__c.field-meta.xml
<CustomField>
    <fullName>GST_Total__c</fullName>
    <label>GST Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>