ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/GST_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Type__c</fullName>
    <label>GST Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inter State</fullName>
            </value>
            <value>
                <fullName>Intra State</fullName>
            </value>
            <value>
                <fullName>UT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>