ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/HSN_No__c.field-meta.xml
<CustomField>
    <fullName>HSN_No__c</fullName>
    <label>HSN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>