ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Invoice_Amount_incl_discount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_incl_discount__c</fullName>
    <label>Invoice Amount(incl.discount)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>