ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Invoice_Amount_incl_discounts__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_incl_discounts__c</fullName>
    <label>Invoice Amount(incl.discount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>