ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Invoice_Charger__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Charger__c</fullName>
    <label>Invoice Charger</label>
    <length>254</length>
    <type>Text</type>
</CustomField>