ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Invoice_Uploaded_Remark__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Uploaded_Remark__c</fullName>
    <label>Invoice Uploaded Remark</label>
    <length>200</length>
    <type>Text</type>
</CustomField>