ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Is_Invoice_date_correctly_captured__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoice_date_correctly_captured__c</fullName>
    <label>Is Invoice date correctly captured ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>