ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Is_Invoice_MMV_matching_with_above_MMV__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoice_MMV_matching_with_above_MMV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoice MMV matching with above MMV?</label>
    <type>Checkbox</type>
</CustomField>