ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Main_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Main_Dealer__c</fullName>
    <label>Main Dealer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>