ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/On_road_price__c.field-meta.xml
<CustomField>
    <fullName>On_road_price__c</fullName>
    <label>On-road price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>