ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Payment_to_be_made__c.field-meta.xml
<CustomField>
    <fullName>Payment_to_be_made__c</fullName>
    <label>Payment to be made</label>
    <length>200</length>
    <type>Text</type>
</CustomField>