ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Payment_to_be_made_to__c.field-meta.xml
<CustomField>
    <fullName>Payment_to_be_made_to__c</fullName>
    <label>Payment to be made to ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Dealer</fullName>
            </value>
            <value>
                <fullName>sub dealer</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>