ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Tax_Collected_at_Source__c.field-meta.xml
<CustomField>
    <fullName>Tax_Collected_at_Source__c</fullName>
    <label>Tax Collected at Source</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>