ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Tax_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice_Date__c</fullName>
    <label>Tax Invoice Date</label>
    <type>Date</type>
</CustomField>