ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Tax_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice_No__c</fullName>
    <label>Tax Invoice No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>