ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Type_of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Invoice__c</fullName>
    <label>Type of Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performa Invoice</fullName>
            </value>
            <value>
                <fullName>Tax Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>