ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/UTGST__c.field-meta.xml
<CustomField>
    <fullName>UTGST__c</fullName>
    <label>UTGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>