ProdIND/ProdPrograms/force-app/main/default/objects/Invoice_Details__c/fields/Vehicle_Detail__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Detail</label>
    <referenceTo>Vehicle_Detail__c</referenceTo>
    <relationshipLabel>Invoice Details</relationshipLabel>
    <relationshipName>Invoice_Details</relationshipName>
    <type>Lookup</type>
</CustomField>